*** Unreleased ***
-Fixes
Don't sanitize config elements

- Enhancements
Move function calculPresence in dedicated class (WorkingHours)
Allows more permissive entries in working hours
Update DataTable libraries and remove flash buttons
Use APP_ENV in legacy code (config.php) and move uploaded files
Upgrade PHP to 7.4 in composer.json
Update install.sh : check if PHP version > 7.4, run composer update if needed
Upgrade symfony/flex to release 1.9.8
Start handling permissions in a YAML file
Symfonize framework index (planning/postes_cfg/index.php)
Symfonize working hours (edit and save)
Symfonize statistics index
Symfonize My Account page
Symfonize framework's seperation lines
Symfonize framework groups
Symfonize agents index page
Symfonize framework table edit/add
Add a param to define the switching time between half-day and full-day
Absences for remote working ability
Symfonize notifications save
Symfonize framework's group deletion
Deny holidays if planning started or validated
The user can select the validation level when adding an holiday


-Fixes
Remove HTML entities in closing days
Working hours fixes
Add validate icon
Use PHP default timezone.
Keep absence's other reason when there is recurrence
Fix display of agents on vacation on the week schedules
Prevent warnings in script tools/remove_html_entities_from_absences_reasons.php
Prevent the redirection to the 'access denied' page on cli and symfony mode
Replace heredoc string by double quotes string at end of weekly
planning
check if agents are blocked when right copying planning's cell
show only managed agents in list and in add form
Fix/Statistics : Initialize information about agents
Fix reset URL for holiday index and rename related button
Write ICS URL from base URL
Fix a wrong links on absence and holiday notifications
Restore right for self-removing in absence edition

*** Version 20.10.00       (2020-10-09)   ***
- Enhancements
Add working hours exceptions
Retrieve absences from microsoft graph API